ingress.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"kubernetes.io/ingress.class":"nginx","meta.helm.sh/release-name":"argocd","meta.helm.sh/release-namespace":"default"},"labels":{"app.kubernetes.io/component":"server","app.kubernetes.io/instance":"argocd","app.kubernetes.io/managed-by":"Helm","app.kubernetes.io/name":"argocd-server","app.kubernetes.io/part-of":"argocd","helm.sh/chart":"argo-cd-3.28.0"},"name":"argocd-server","namespace":"default"},"spec":{" [...]
      kubernetes.io/ingress.class: nginx
      meta.helm.sh/release-name: argocd
      meta.helm.sh/release-namespace: default
    creationTimestamp: "2021-12-11T09:01:31Z"
    generation: 3
    labels:
      app.kubernetes.io/component: server
      app.kubernetes.io/instance: argocd
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/name: argocd-server
      app.kubernetes.io/part-of: argocd
      helm.sh/chart: argo-cd-3.28.0
    name: argocd-server
    namespace: default
    resourceVersion: "2470968"
    uid: 78cf4924-158b-42fc-9288-7a77b4aeecd1
  spec:
    ingressClassName: nginx
    rules:
    - http:
        paths:
        - backend:
            service:
              name: argocd-server
              port:
                number: 80
          path: /
          pathType: Prefix
  status:
    loadBalancer:
      ingress:
      - hostname: localhost
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
